2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	Update references to SVG2 and CSS Exclusions.

2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	Reference value definitions of CSS Background and Borders.

2013-04-04  Dirk Schulze  <dschulze@adobe.com>
	Change titles from Mask to Layered Masks and Mask Box Image to Box-Image Masks.

2013-04-03  Dirk Schulze  <dschulze@adobe.com>
	Move section 'The Mask Image Rendering Model' to 'Mask'

2013-04-03  Dirk Schulze  <dschulze@adobe.com>
	Move visible effect paint order definition to module interaction.

2013-04-03  Dirk Schulze  <dschulze@adobe.com>
	Incorporated more feedback from fantasai:
	- fixed definition of child
	- fixed definition of select()
	- clarify behavior on invalid URI
	- editorial changes

2013-04-02  Dirk Schulze  <dschulze@adobe.com>
	descendant is not correct either, should be child to be precise.

2013-04-02  Dirk Schulze  <dschulze@adobe.com>
	Sibling should be descendant on selector() and child value for mask-image and clip-path.

2013-04-02  Dirk Schulze  <dschulze@adobe.com>
	Clean up introduction and term definitions after feedback of fantasai.

2013-04-02  Dirk Schulze  <dschulze@adobe.com>
	Style elements like in SVG2.

2013-04-02  Dirk Schulze  <dschulze@adobe.com>
	Editorial changes in terminology section.

2013-03-13  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from fantasai.
	http://lists.w3.org/Archives/Public/www-style/2013Mar/0228.html

2013-03-12  Dirk Schulze  <dschulze@adobe.com>
	Add conformance section.

2013-03-11  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from Liam R E Quin.
	http://lists.w3.org/Archives/Public/www-style/2013Mar/0198.html

2013-03-10  Dirk Schulze  <dschulze@adobe.com>
	Incorporate feedback from Björn Höhrmann.
	http://lists.w3.org/Archives/Public/www-style/2013Mar/0190.html

2013-03-08  Dirk Schulze  <dschulze@adobe.com>
	Introduce unclipped masks for 'mask' element.

2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Style changes.
