@@ -165,7 +165,7 @@ Table of contents</h2>
   to the <a href="http://www.w3.org/TR/CSS2/visuren.html" title="Visual formatting model">Visual formatting model</a>
   from [[!CSS21]]. Some values of these properties result in the creation of a <a href="http://www.w3.org/TR/CSS2/visuren.html#z-index" title="Visual formatting model">stacking context</a>.
 
-<p>The compositing model follows the SVG compositing model [[!SVG2]]: first any filter effect [[FILTER-EFFECTS]] is
+<p>The compositing model follows the SVG compositing model [[!SVG11]]: first any filter effect [[FILTER-EFFECTS]] is
  applied, then any clipping, masking and opacity [[CSS3COLOR]]. These effects all apply after any other CSS effects
  such as 'border' [[!CSS3BG]].
 
@@ -194,7 +194,7 @@ Table of contents</h2>
   <p>
     The union of all border boxes for the element that has an associated CSS layout box and is not
     in the <code>http://www.w3.org/2000/svg</code> namespace and its descendant elements. Or the
-    object bounding box [[!SVG2]], if the element does not have
+    object bounding box [[!SVG11]], if the element does not have
     an associated CSS layout box and is in the <code>http://www.w3.org/2000/svg</code> namespace.
     (See <a href="http://www.w3.org/TR/cssom-view/#dom-element-getboundingclientrect">getBoundingClientRect</a>
     [[CSSOM-VIEW]].)
@@ -225,7 +225,7 @@ Table of contents</h2>
 <dt id="TermObjectBoundingBoxUnits"><dfn>object bounding box units</dfn></dt>
 <dd>
   The <span class="term">bounding client rect</span> defines the coordinate system in which to resolve values, as
-  defined in <a>object bounding box units</a> [[!SVG2]].
+  defined in <a>object bounding box units</a> [[!SVG11]].
 </dd>
 <dt id="TermMask"><dfn>mask</dfn></dt>
 <dd>
@@ -670,7 +670,7 @@ The syntax of the property is given with
   <dt><dfn title="''content-box''!!'mask-clip' value">
       ''content-box''</dfn></dt> 
   <dd>The painted content is rectricted to (clipped to) the
-    <span>content box</span> respectively <span>object bounding box</span> [[!SVG2]] for objects without associated layout box.
+    <span>content box</span> respectively <span>object bounding box</span> [[!SVG11]] for objects without associated layout box.
   <dt><dfn title="''no-clip''!!'mask-clip' value">
       ''no-clip''</dfn></dt>
   <dd>The painted content is not restricted (not clipped). The <span>mask painting area</span> is set to
@@ -734,7 +734,7 @@ operates on to determine the mask positioning area(s).
       ''border-box''</dfn>
   <dd>The position is relative to the border box respectively <span>painting box</span> for objects without associated layout box.
   <dt><dfn>''content-box''</dfn>
-  <dd>The position is relative to the content box respectively object bounding box [[!SVG2]] for objects without associated layout box.
+  <dd>The position is relative to the content box respectively object bounding box [[!SVG11]] for objects without associated layout box.
 </dl>
 
 <p class="note">Note that there is no corresponding box for
@@ -1070,7 +1070,7 @@ The color channels do not contribute to the mask value.
     </li>
     <li>Then, using non-premultiplied RGB color values, apply the
     luminance-to-alpha coefficients (as defined in the <a>'feColorMatrix'</a>
-    filter primitive [[!SVG2]]) to convert the RGB color values to luminance
+    filter primitive [[!SVG11]]) to convert the RGB color values to luminance
     values.
     </li>
   </ul>
@@ -1548,10 +1548,10 @@ If the second keyword is absent, it is assumed to be the same as the first.
 
 <dl>
   <dt><dfn>''nonzero''</dfn></dt>
-  <dd>See description of <a>'fill-rule'</a> property [[!SVG2]].</dd>
+  <dd>See description of <a>'fill-rule'</a> property [[!SVG11]].</dd>
 
   <dt><dfn>''evenodd''</dfn></dt>
-  <dd>See description of <a>'fill-rule'</a> property [[!SVG2]].</dd>
+  <dd>See description of <a>'fill-rule'</a> property [[!SVG11]].</dd>
 </dl>
 
 <p>The 'clip-rule' property only applies to graphics elements that are
@@ -1768,7 +1768,7 @@ will be the intersection of the clipping path specified by its
 'clip-path' property (if any) with any clipping paths on its
 ancestors, as specified by the 'clip-path' property on the
 elements
-which establish a new viewport. (See [[!SVG2]])</p>
+which establish a new viewport. (See [[!SVG11]])</p>
 
 <p>A couple of additions:</p>
 
@@ -1951,7 +1951,7 @@ Corresponds to attribute <a>'mask/height'</a> on the given
 <h3 class="no-ref">Conformance to CSS Background and Borders</h3>
 
 <p>
-  Some property and element definitions in this specification require an SVG 1.1 implementation [[!SVG2]]. UAs without
+  Some property and element definitions in this specification require an SVG 1.1 implementation [[!SVG11]]. UAs without
   support for SVG must not implement any of the following properties and elements: 'mask-type', 'clip-rule', <a>'clipPath element'</a> element, <a>'mask element'</a> element. For UAs without
   support for SVG, the 'mask' and 'clip-path' properties must neither support references to
   <a>'mask element'</a> elements nor to <a>'clipPath element'</a> elements.
