@@ -371,8 +371,8 @@
    href="http://www.w3.org/TR/CSS2/visuren.html#z-index"
    title="Visual formatting model">stacking context</a>.
 
-  <p>The compositing model follows the SVG compositing model <a href="#SVG2"
-   rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>: first any filter effect <a
+  <p>The compositing model follows the SVG compositing model <a href="#SVG11"
+   rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>: first any filter effect <a
    href="#FILTER-EFFECTS"
    rel=biblioentry>[FILTER-EFFECTS]<!--{{FILTER-EFFECTS}}--></a> is applied,
    then any clipping, masking and opacity <a href="#CSS3COLOR"
@@ -413,8 +413,8 @@
     <p> The union of all border boxes for the element that has an associated
      CSS layout box and is not in the <code>http://www.w3.org/2000/svg</code>
      namespace and its descendant elements. Or the object bounding box <a
-     href="#SVG2" rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>, if the element
-     does not have an associated CSS layout box and is in the
+     href="#SVG11" rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>, if the
+     element does not have an associated CSS layout box and is in the
      <code>http://www.w3.org/2000/svg</code> namespace. (See <a
      href="http://www.w3.org/TR/cssom-view/#dom-element-getboundingclientrect">getBoundingClientRect</a>
      <a href="#CSSOM-VIEW"
@@ -453,8 +453,8 @@
     rect</a> defines the coordinate system in which to resolve values, as
     defined in <a
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/coords.html#ObjectBoundingBoxUnits">object
-    bounding box units</a> <a href="#SVG2"
-    rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>.
+    bounding box units</a> <a href="#SVG11"
+    rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>.
 
    <dt id=TermMask><dfn id=mask0>mask</dfn>
 
@@ -1136,9 +1136,9 @@ body {
     class=css>content-box</code>’</dfn>
 
    <dd>The painted content is rectricted to (clipped to) the <span>content
-    box</span> respectively <span>object bounding box</span> <a href="#SVG2"
-    rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a> for objects without associated
-    layout box.
+    box</span> respectively <span>object bounding box</span> <a href="#SVG11"
+    rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a> for objects without
+    associated layout box.
 
    <dt><dfn id=lsquono-cliprsquo title="''no-clip''!!'mask-clip' value">
     ‘<code class=css>no-clip</code>’</dfn>
@@ -1240,8 +1240,9 @@ body {
     class=css>content-box</code>’</dfn>
 
    <dd>The position is relative to the content box respectively object
-    bounding box <a href="#SVG2" rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>
-    for objects without associated layout box.
+    bounding box <a href="#SVG11"
+    rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a> for objects without
+    associated layout box.
   </dl>
 
   <p class=note>Note that there is no corresponding box for ‘<code
@@ -2087,8 +2088,8 @@ body {
       class=element-name
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/filters.html#feColorMatrixElement">‘<code
       class=property>feColorMatrix</code>’</a> filter primitive <a
-      href="#SVG2" rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>) to convert the
-      RGB color values to luminance values.
+      href="#SVG11" rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>) to convert
+      the RGB color values to luminance values.
     </ul>
 
    <li>Multiply the computed luminance value by the corresponding alpha value
@@ -2813,15 +2814,15 @@ div {
 
    <dd>See description of <a class=property
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#FillRuleProperty">‘<code
-    class=property>fill-rule</code>’</a> property <a href="#SVG2"
-    rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>.
+    class=property>fill-rule</code>’</a> property <a href="#SVG11"
+    rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>.
 
    <dt><dfn id=lsquoevenoddrsquo>‘<code class=css>evenodd</code>’</dfn>
 
    <dd>See description of <a class=property
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#FillRuleProperty">‘<code
-    class=property>fill-rule</code>’</a> property <a href="#SVG2"
-    rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>.
+    class=property>fill-rule</code>’</a> property <a href="#SVG11"
+    rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>.
   </dl>
 
   <p>The ‘<a href="#clip-rule"><code class=property>clip-rule</code></a>’
@@ -3384,7 +3385,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    (if any) with any clipping paths on its ancestors, as specified by the
    ‘<a href="#clip-path"><code class=property>clip-path</code></a>’
    property on the elements which establish a new viewport. (See <a
-   href="#SVG2" rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>)
+   href="#SVG11" rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>)
 
   <p>A couple of additions:
 
@@ -3643,8 +3644,8 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    class=secno>10.1. </span>Conformance to CSS Background and Borders</h3>
 
   <p> Some property and element definitions in this specification require an
-   SVG 1.1 implementation <a href="#SVG2"
-   rel=biblioentry>[SVG2]<!--{{!SVG2}}--></a>. UAs without support for SVG
+   SVG 1.1 implementation <a href="#SVG11"
+   rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>. UAs without support for SVG
    must not implement any of the following properties and elements: ‘<a
    href="#mask-type"><code class=property>mask-type</code></a>’, ‘<a
    href="#clip-rule"><code class=property>clip-rule</code></a>’, <a
@@ -3875,13 +3876,13 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    </dd>
    <!---->
 
-   <dt id=SVG2>[SVG2]
+   <dt id=SVG11>[SVG11]
 
-   <dd>Nikos Andronikos; et al. <a
-    href="http://www.w3.org/TR/2012/WD-SVG2-20120828/"><cite>Scalable Vector
-    Graphics (SVG) 2.</cite></a> 28 August 2012. W3C Working Draft. (Work in
-    progress.) URL: <a
-    href="http://www.w3.org/TR/2012/WD-SVG2-20120828/">http://www.w3.org/TR/2012/WD-SVG2-20120828/</a>
+   <dd>Erik Dahlström; et al. <a
+    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/"><cite>Scalable
+    Vector Graphics (SVG) 1.1 (Second Edition).</cite></a> 16 August 2011.
+    W3C Recommendation. URL: <a
+    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/">http://www.w3.org/TR/2011/REC-SVG11-20110816/</a>
    </dd>
    <!---->
   </dl>
