@@ -1,4 +1,8 @@
 2013-04-04  Dirk Schulze  <dschulze@adobe.com>
+	After further checking, everything that would require SVG2 was removed.
+	Switching from SVG2 to SVG11 everywhere.
+
+2013-04-04  Dirk Schulze  <dschulze@adobe.com>
 	Update references to SVG2 and CSS Exclusions.
 
 2013-04-04  Dirk Schulze  <dschulze@adobe.com>
